k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-incident-api
  labels:
    app.kubernetes.io/name: ai-incident-copilot
    app.kubernetes.io/component: api
spec:
  # ClusterIP достаточно, потому что внешний трафик приходит через Ingress.
  selector:
    app.kubernetes.io/name: ai-incident-copilot
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
